Added permutation and combination